--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/home_styles.css"/>
     <link rel="stylesheet" href="CSS/navbar_style.css" />
     <link rel="stylesheet" href="CSS/footer_style.css" />
+    <link rel="stylesheet" href="CSS/animation.css" />
 
     <link rel="icon" href="./Immagini/logo.svg">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kristi" />
@@ -104,7 +105,8 @@
         </div>
     </div>
 
-    <div  class="section" id="showroom">
+    <div  class="section" id="showroom" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
+                                 background-size: cover;">
         <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
             <img src="./Immagini/Background/background_14.jpg" style="width: 100%; height: 100%">
         </div>
@@ -183,6 +185,6 @@
 
 </body>
 <script src="./Script/navbar_effect.js"></script>
-<script src="./Script/footer_effect.js"></script>
 <script src="./Script/home_script.js"></script>
+<script src="./Script/home_animation_script.js"></script>
 </html>
