--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <nav class="navbar">
-            <a href="/" class="logo_navbar">
+            <a href="index.html" class="logo_navbar">
                 <img class="logo" src="./Immagini/logo.svg" style="width: 100%; height: 100%">
             </a>
 
@@ -32,11 +32,11 @@
             </div>
 
             <div class="nav_links">
-                <a class="link_navbar" href="#" style="color: #F0B357; text-decoration: underline">Home</a>
+                <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
                 <a class="link_navbar" href="#">Chi Siamo</a>
                 <a class="link_navbar" href="#">ShowRoom</a>
                 <a class="link_navbar" href="#">Prodotti</a>
-                <a class="link_navbar" href="#">Contatti</a>
+                <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
         </nav>
     </header>
@@ -78,8 +78,7 @@
         </div>
     </div>
 
-    <div  class="section" id="chiSiamo" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
-                                 background-size: cover;">
+    <div  class="section" id="chiSiamo">
         <div class="descrizione_sezione">
 
             <h1 class="header_style">CHI SIAMO</h1>
@@ -105,8 +104,7 @@
         </div>
     </div>
 
-    <div  class="section" id="showroom" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
-                                 background-size: cover;">
+    <div  class="section" id="showroom">
         <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
             <img src="./Immagini/Background/background_14.jpg" style="width: 100%; height: 100%">
         </div>
@@ -124,8 +122,7 @@
         </div>
     </div>
 
-    <div  class="section" id="prodotti" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/background_3.jpg) no-repeat center center fixed;
-                                 background-size: cover;">
+    <div  class="section" id="prodotti">
         <div class="descrizione_sezione">
 
             <h1 class="header_style">I NOSTRI PRODOTTI</h1>
