--- a/contatti.html
+++ b/contatti.html
@@ -99,8 +99,7 @@
 
     </div>
 
-    <div class="richiedi_preventivo" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../Immagini/Background/desktop/background_6.jpg) no-repeat center center fixed;
-         background-size: cover;">
+    <div class="richiedi_preventivo">
         <div class="map_container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.072694874342!2d14.536847476828235!3d40.71641617139306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbdff414b9427%3A0xc51e07b32a571dae!2sINDA%20porte%20%26%20finestre!5e0!3m2!1sit!2sit!4v1700815965651!5m2!1sit!2sit"
                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -123,18 +122,17 @@
                         <h2>*Telefono</h2>
                         <input type="text">
                     </div>
-
                 </div>
-                <div class="campo_form_Messaggio">
+
+                <div class="campo_form">
                     <h2>*Messaggio</h2>
                     <textarea rows="10"></textarea>
                 </div>
 
                 <div class="container_trattamento_dati">
-                    <input type="checkbox" id="acconsento">
+                    <input type="checkbox" id="checkbox">
                     <p>Ho letto l’Informativa e Autorizzo Il Trattamento Dei Miei Dati Personali Per le finalita Ivi indicate</p>
                 </div>
-
 
                 <input type="submit" class="submit">
 
