--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="format-detection" content="telephone=no">
+
     <link rel="stylesheet" href="CSS/home_styles.css"/>
     <link rel="stylesheet" href="CSS/navbar_style.css" />
     <link rel="stylesheet" href="CSS/footer_style.css" />
@@ -16,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Home</title>
 </head>
-<body onScroll="coloreNavBar();" onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
+<body onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
 
     <header>
         <nav class="navbar">
