--- a/contatti.html
+++ b/contatti.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="format-detection" content="telephone=no">
+
     <link rel="stylesheet" href="CSS/contatti_styles.css"/>
     <link rel="stylesheet" href="CSS/navbar_style.css" />
     <link rel="stylesheet" href="CSS/footer_style.css" />
@@ -16,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Home</title>
 </head>
-<body onScroll="coloreNavBar();" onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
+<body onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
 
     <header>
         <nav class="navbar">
@@ -48,10 +50,10 @@
     <div class="info_preventivo">
         <div class="descrizione_sezione">
             <h1>RICHIEDI UN PREVENTIVO GRATUITO</h1>
-            <p>Siamo emozionati di offrirti la possibilità di dare vita alla tua visione attraverso la nostra sezione "Richiedi un Preventivo". Qui, vogliamo invitarti a condividere i dettagli del tuo progetto, aprendo le porte a un'esperienza personalizzata di porte e infissi che si adatteranno perfettamente al tuo stile e alle tue esigenze uniche.
+            <p class="body">Siamo emozionati di offrirti la possibilità di dare vita alla tua visione attraverso la nostra sezione "Richiedi un Preventivo". Qui, vogliamo invitarti a condividere i dettagli del tuo progetto, aprendo le porte a un'esperienza personalizzata di porte e infissi che si adatteranno perfettamente al tuo stile e alle tue esigenze uniche.
                 Ogni progetto che affrontiamo è unico e speciale, proprio come la tua casa o il tuo spazio commerciale. Siamo qui per ascoltarti attentamente, per comprendere i tuoi desideri e per collaborare con te al fine di tradurre la tua visione in una realtà tangibile e affascinante.
                 La tua soddisfazione è la nostra massima priorità. Collaborando con noi, puoi avere la certezza che ogni dettaglio del tuo progetto sarà curato con attenzione e precisione. Concludiamo ogni fase con l'obiettivo di superare le tue aspettative, consegnandoti porte e infissi che non solo rispecchiano, ma elevano il tuo stile di vita.</p>
-            <p>Inda Infissi con sede operativa a Sant’antonio abate e show room a angri è facilmente raggiungibile da Boscoreale, Poggiomarino, Pompei, Terzigno, Torre Annunziata, San Giuseppe Vesuviano, Ottaviano, San Gennaro Vesuviano, San Valentino Torio, San Marzano Sul Sarno, Angri, Pagani, Sant'Egido Del Monte Albino, Sant'Antonio Abate, Santa Maria La Carità e da tutti i Comuni Vesuviani e quelli dell'Agro Nocerino-Sarnese.</p>
+            <p class="body">Inda Infissi con sede operativa a Sant’antonio abate e show room a angri è facilmente raggiungibile da Boscoreale, Poggiomarino, Pompei, Terzigno, Torre Annunziata, San Giuseppe Vesuviano, Ottaviano, San Gennaro Vesuviano, San Valentino Torio, San Marzano Sul Sarno, Angri, Pagani, Sant'Egido Del Monte Albino, Sant'Antonio Abate, Santa Maria La Carità e da tutti i Comuni Vesuviani e quelli dell'Agro Nocerino-Sarnese.</p>
         </div>
         <div class="info">
             <h1>SEDE E RECAPITI</h1>
@@ -189,4 +191,5 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/contatti_script.js"></script>
+<script src="./Script/contatti_animation_script.js"></script>
 </html>
