--- a/contatti.html
+++ b/contatti.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Kristi" />
     <link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <title>Home</title>
+    <title>Contatti</title>
 </head>
 <body onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
 
@@ -37,7 +37,7 @@
                 <a class="link_navbar" href="index.html" >Home</a>
                 <a class="link_navbar" href="#">Chi Siamo</a>
                 <a class="link_navbar" href="#">ShowRoom</a>
-                <a class="link_navbar" href="#">Prodotti</a>
+                <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html" style="color: #F0B357; text-decoration: underline">Contatti</a>
             </div>
         </nav>
