--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
                 <a class="link_navbar" href="#">Chi Siamo</a>
                 <a class="link_navbar" href="#">ShowRoom</a>
-                <a class="link_navbar" href="#">Prodotti</a>
+                <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
         </nav>
