--- a/prodotti.html
+++ b/prodotti.html
@@ -128,9 +128,17 @@
         </div>
         <div class="container_prodotto">
             <div class="container_descrizione_prodotto">
-                <h1>Header</h1>
-                <p>Body</p>
-
+                <h1>Porte</h1>
+                <p>Porta interna moderna a battente in legno massiccio con finitura laccata.
+                    Il design elegante si adatta perfettamente a ambienti contemporanei, aggiungendo un tocco di stile senza compromettere la funzionalità.
+                    Dotata di maniglie in acciaio inossidabile di alta qualità, questa porta è facile da installare e offre una solida costruzione che garantisce durata nel tempo.
+                    Le dimensioni standard la rendono adatta a una varietà di spazi, mentre il colore neutro si abbina facilmente a qualsiasi arredamento.</p>
+                <div class="freccia_dietro">
+                    <img src="Immagini/SVG/freccia.svg" style="width: 100%; height: 100%; rotate: 180deg;">
+                </div>
+                <div class="freccia_avanti">
+                    <img src="Immagini/SVG/freccia.svg" style="width: 100%; height: 100%">
+                </div>
             </div>
             <div class="container_immagini_prodotto">
 
