--- a/prodotti.html
+++ b/prodotti.html
@@ -143,21 +143,21 @@
             <div class="container_immagini_prodotto">
 
                 <div class="container_main_img">
-                    <img src="Immagini/Prodotti/Porte/porta4.jpeg" alt="porta" style="display:block; width: auto; height: 100%; margin: 0 auto 0 auto;">
+                    <img id="main_img" src="Immagini/Prodotti/Porte/porta4.jpeg" alt="porta" style="display:block; width: auto; height: 100%; margin: 0 auto 0 auto;">
                 </div>
 
                 <div class="container_list_sub_img">
                     <div class="container_sub_img">
-                        <img src="Immagini/Prodotti/Porte/porta5.jpeg" alt="porta" style="width: 100%; height: 100%;">
+                        <img id="sub_img1" src="Immagini/Prodotti/Porte/porta5.jpeg" alt="porta" style="width: 100%; height: 100%;">
                     </div>
                     <div class="container_sub_img">
-                        <img src="Immagini/Prodotti/Porte/porta2.jpeg" alt="porta" style="width: 100%; height: 100%;">
+                        <img id="sub_img2" src="Immagini/Prodotti/Porte/porta2.jpeg" alt="porta" style="width: 100%; height: 100%;">
                     </div>
                     <div class="container_sub_img">
-                        <img src="Immagini/Prodotti/Porte/porta3.jpeg" alt="porta" style="width: 100%; height: 100%;">
+                        <img id="sub_img3" src="Immagini/Prodotti/Porte/porta3.jpeg" alt="porta" style="width: 100%; height: 100%;">
                     </div>
                     <div class="container_sub_img">
-                        <img src="Immagini/Prodotti/Porte/materiale.png" alt="porta" style="width: 100%; height: 100%;">
+                        <img id="sub_img4" src="Immagini/Prodotti/Porte/materiale.png" alt="porta" style="width: 100%; height: 100%;">
                     </div>
                 </div>
 
