--- a/prodotti.html
+++ b/prodotti.html
@@ -35,8 +35,8 @@
 
             <div class="nav_links">
                 <a class="link_navbar" href="index.html" >Home</a>
-                <a class="link_navbar" href="#">Chi Siamo</a>
-                <a class="link_navbar" href="#">ShowRoom</a>
+                <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
+                <a class="link_navbar" href="showroom.html">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html" style="color: #F0B357; text-decoration: underline">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
