--- a/showroom.html
+++ b/showroom.html
@@ -73,19 +73,19 @@
 
                 <div class="campo_form" >
                     <h2>*Nome</h2>
-                    <input name="nome" type="text">
+                    <input name="nome" type="text" placeholder="nome">
                 </div>
                 <div class="campo_form">
                     <h2>*Email</h2>
-                    <input name="mail" type="text">
+                    <input name="mail" type="text" placeholder="exemple@exemple.it">
                 </div>
                 <div class="campo_form">
                     <h2>*Telefono</h2>
-                    <input name="telefono" type="text">
+                    <input name="telefono" type="text" placeholder="3384427293">
                 </div>
                 <div class="campo_form" >
                     <h2>*Giorno</h2>
-                    <input name="giorno" type="date">
+                    <input name="giorno" type="date" placeholder="01/01/2000">
                 </div>
 
                 <div class="container_trattamento_dati">
