--- a/showroom.html
+++ b/showroom.html
@@ -63,6 +63,48 @@
             Entra nel nostro Showroom e inizia il viaggio per trasformare la tua visione in una casa che riflette veramente chi sei. Un sogno, un progetto, una realtà: tutto inizia qui</p>
     </div>
 
+    <div class="section_img">
+
+        <div class="container_img">
+            <img id="immagine" style="height: 100%; width: auto;">
+            <button class="close">X</button>
+        </div>
+
+        <div class="card-mosaic">
+
+            <div class="card card-tall card-wide" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Prodotti/Porte/porta1.jpeg);">
+            </div>
+
+            <div class="card card-tall" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Prodotti/Porte/porta2.jpeg)">
+            </div>
+
+            <div class="card" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Prodotti/Porte/porta3.jpeg)">
+            </div>
+
+            <div class="card" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Prodotti/Porte/porta4.jpeg)">
+            </div>
+
+            <div class="card" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Prodotti/Porte/porta5.jpeg)">
+            </div>
+
+            <div class="card" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Background/background_2.jpg)">
+            </div>
+
+            <div class="card card-wide" onclick="showImage(event)"
+                 style="background-image: url(../Immagini/Background/background_3.jpg)">
+            </div>
+
+        </div>
+
+    </div>
+
+
     <div class="container_vieni_a_trovarci">
         <div class="container_appuntamento">
 
