--- a/contatti.html
+++ b/contatti.html
@@ -108,7 +108,7 @@
         </div>
         <div class="form_container">
 
-            <form name="modulo" onsubmit="return sendMail();" style="width: 100%">
+            <form name="modulo" onsubmit="return sendMailPreventivo();" style="width: 100%">
                 <h1>Richiedi un preventivo</h1>
                 <p>*Campi Obbligatori</p>
                 <p id="errore">Inserire un messaggio</p>
