--- a/showroom.html
+++ b/showroom.html
@@ -108,7 +108,7 @@
     <div class="container_vieni_a_trovarci">
         <div class="container_appuntamento">
 
-            <form name="modulo_appuntamento" onsubmit="return sendMail();">
+            <form name="modulo_appuntamento" onsubmit="return sendMailAppuntamento();">
                 <h1>Prenota un appuntamento</h1>
                 <p>*Campi Obbligatori</p>
                 <p id="errore">Completa tutti i campi</p>
@@ -140,7 +140,7 @@
             </form>
 
             <div class="allert_prenotazione">
-                Grazie per avere richesto un appuntamente, ti contatteremo nei prossimi giorni per confermare confermarlo.
+                Grazie per avere richesto un appuntamente, ti contatteremo nei prossimi giorni per confermarlo.
             </div>
         </div>
         <div class="container_map">
