--- a/showroom.html
+++ b/showroom.html
@@ -65,6 +65,36 @@
 
     <div class="section_img">
 
+        <div class="container_img_mobile">
+            <img>
+            <div class="slider_img">
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+                <div class="element">
+
+                </div>
+            </div>
+
+
+        </div>
+
+
         <div class="container_img">
             <img id="immagine" style="height: 100%; width: auto;">
             <button class="close">X</button>
