--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </nav>
     </header>
 
-    <div  class="main_img">
+    <div  class="main_img" style="position: fixed">
 
         <img class="copertina_main_img" src="Immagini/Copertina/LogoCopertina-Mobile.svg"
         style="
-            display: block;
+             display: block;
              width: 100%;
              height: 100%;
              scale: 1;
